--- a/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
+++ b/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
@@ -10,8 +10,8 @@
     <div class="mx-4">
         <div class="grid grid-cols-12 gap-6">
             <div class="col-span-12">
-                <h2 class="text-3xl font-medium">Welcome, User!</h2>
-                <h2 class="text-1xl font-normal">Here’s the overview of your patients.</h2>
+                <h2 class="text-3xl font-bold">Welcome, User!</h2>
+                <h2 class="text-1xl font-normal">Here’s the overview of your patients t.</h2>
             </div>
             <div class="col-span-12">
                 <div class="col-span-12 mt-2 flex flex-col lg:flex-row gap-2">
@@ -23,15 +23,15 @@
                 <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #6691C1" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
-                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #3C5C80">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-base" style="background-color: #3C5C80">
                                 <span class="flex items-center" style="color: #DED7D7">N</span>
                             </div>
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#F7F6F6">@Model.NewbornCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#F7F6F6">Newborn</div>
-                                <div class="mt-1 text-base text-gray-600" style="color:#F7F6F6">0 - 28 days</div>
+                                <div class="mt-3 text-3xl font-semibold leading-8" style="color:#F7F6F6">@Model.NewbornCount</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#F7F6F6">Newborn</div>
+                                <div class="mt-1 text-sm text-gray-600" style="color:#F7F6F6">0 - 28 days</div>
                             </div>
                         </div>
                     </div>
@@ -39,15 +39,15 @@
                 <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #AFCAFC" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
-                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #3C5C80">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-base" style="background-color: #3C5C80">
                                 <span class="flex items-center" style="color: #DED7D7">I</span>
                             </div>
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.InfantCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Infant</div>
-                                <div class="mt-1 text-base text-gray-600" style="color:#24384E">29 days - 11 mos. old</div>
+                                <div class="mt-3 text-3xl font-semibold leading-8" style="color:#24384E">@Model.InfantCount</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#24384E">Infant</div>
+                                <div class="mt-1 text-sm text-gray-600" style="color:#24384E">29 days - 11 mos. old</div>
                             </div>
                         </div>
                     </div>
@@ -55,15 +55,15 @@
                 <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #D2E0FB" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
-                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #3C5C80">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-base" style="background-color: #3C5C80">
                                 <span class="flex items-center" style="color: #DED7D7">U</span>
                             </div>
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.UnderFiveCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Under-five</div>
-                                <div class="mt-1 text-base text-gray-600" style="color:#24384E">1 - 4 years old</div>
+                                <div class="mt-3 text-3xl font-semibold leading-8" style="color:#24384E">@Model.UnderFiveCount</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#24384E">Under-five</div>
+                                <div class="mt-1 text-sm text-gray-600" style="color:#24384E">1 - 4 years old</div>
                             </div>
                         </div>
                     </div>
@@ -71,15 +71,15 @@
                 <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #E8E3C9" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
-                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #A49E83">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-base" style="background-color: #A49E83">
                                 <span class="flex items-center" style="color: #EEE9E9">S</span>
                             </div>
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.SchoolAgedCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">School-aged</div>
-                                <div class="mt-1 text-base text-gray-600" style="color:#24384E">5 - 9 years old</div>
+                                <div class="mt-3 text-3xl font-semibold leading-8" style="color:#24384E">@Model.SchoolAgedCount</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#24384E">School-aged</div>
+                                <div class="mt-1 text-sm text-gray-600" style="color:#24384E">5 - 9 years old</div>
                             </div>
                         </div>
                     </div>
@@ -87,15 +87,15 @@
                 <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #D0ECB6" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
-                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #829D69">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-base" style="background-color: #829D69">
                                 <span class="flex items-center" style="color: #EEE9E9">A</span>
                             </div>
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.AdolescentsCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Adolescents</div>
-                                <div class="mt-1 text-base text-gray-600" style="color:#24384E">10 - 19 years old</div>
+                                <div class="mt-3 text-3xl font-semibold leading-8" style="color:#24384E">@Model.AdolescentsCount</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#24384E">Adolescents</div>
+                                <div class="mt-1 text-sm text-gray-600" style="color:#24384E">10 - 19 years old</div>
                             </div>
                         </div>
                     </div>
@@ -103,15 +103,15 @@
                 <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #BEE39B" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
-                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #829D69">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-base" style="background-color: #829D69">
                                 <span class="flex items-center" style="color: #EEE9E9">AB</span>
                             </div>
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.AdultCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Adult</div>
-                                <div class="mt-1 text-base text-gray-600" style="color:#24384E">25 - 59 years old</div>
+                                <div class="mt-3 text-3xl font-semibold leading-8" style="color:#24384E">@Model.AdultCount</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#24384E">Adult</div>
+                                <div class="mt-1 text-sm text-gray-600" style="color:#24384E">25 - 59 years old</div>
                             </div>
                         </div>
                     </div>
@@ -119,15 +119,15 @@
                 <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #ACCB8F" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
-                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #829D69">
+                            <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-base" style="background-color: #829D69">
                                 <span class="flex items-center" style="color: #EEE9E9">SC</span>
                             </div>
                         </div>
                         <div class="ml-2 w-full flex-1">
                             <div>
-                                <div class="mt-3 text-4xl font-semibold leading-8" style="color:#F7F6F6">@Model.SeniorCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#F7F6F6">Senior C.</div>
-                                <div class="mt-1 text-base text-gray-600" style="color:#F7F6F6">60 yrs. old & above</div>
+                                <div class="mt-3 text-3xl font-semibold leading-8" style="color:#F7F6F6">@Model.SeniorCount</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#F7F6F6">Senior C.</div>
+                                <div class="mt-1 text-sm text-gray-600" style="color:#F7F6F6">60 yrs. old & above</div>
                             </div>
                         </div>
                     </div>
