--- a/AUF.EMR.MVC/Views/PregnancyRecord/Index.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyRecord/Index.cshtml
@@ -90,6 +90,7 @@
                             </td>
                             <td class="border-b border-gray-100 px-4 py-2 text-left inline-flex items-center text-center">
                                 <a asp-action="Details" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" class="text-green-400 hover:text-green-500 mr-2"><i class="fas fa-eye"></i></a>
+                                <button type="button" onclick="print('Print', 'PregnancyRecord', @Model.HouseholdNo, @item.Id, @item.PatientId)">Print</button>
                                 <a asp-action="Delete" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" class="text-red-300 hover:text-red-400">
                                     <button type="submit" class="text-red-500 hover:text-red-600 py-1 rounded-md"><i class="fas fa-trash-alt"></i></button>
                                 </a>
@@ -101,3 +102,9 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("Prints/_PrintDialogWithId");
+    }
+}
