--- a/AUF.EMR.MVC/Views/Dashboard/Barangay.cshtml
+++ b/AUF.EMR.MVC/Views/Dashboard/Barangay.cshtml
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <div class="col-span-12 grid grid-cols-7 sm:grid-cols-7 md:grid-cols-7 lg:grid-cols-7 xl:grid-cols-7 2xl:grid-cols-7 gap-2">
-                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #6691C1" href="#">
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg h-48 w-48" style="background-color: #6691C1" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
                             <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #3C5C80">
@@ -27,13 +27,13 @@
                         <div class="ml-2 w-full flex-1">
                             <div>
                                 <div class="mt-3 text-4xl font-semibold leading-8" style="color:#F7F6F6">@Model.NewbornCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#F7F6F6">Newborn</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#F7F6F6">Newborn</div>
                                 <div class="mt-1 text-base text-gray-600" style="color:#F7F6F6">0 - 28 days</div>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #AFCAFC" href="#">
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg h-48 w-48" style="background-color: #AFCAFC" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
                             <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #3C5C80">
@@ -43,13 +43,13 @@
                         <div class="ml-2 w-full flex-1">
                             <div>
                                 <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.InfantCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Infant</div>
-                                <div class="mt-1 text-base text-gray-600" style="color:#24384E">29 days - 11 mos. old</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#24384E">Infant</div>
+                                <div class="mt-1 text-base text-gray-600" style="color:#24384E">29 days - 11 mos.</div>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #D2E0FB" href="#">
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg h-48 w-48" style="background-color: #D2E0FB" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
                             <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #3C5C80">
@@ -59,13 +59,13 @@
                         <div class="ml-2 w-full flex-1">
                             <div>
                                 <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.UnderFiveCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Under-five</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#24384E">Under-five</div>
                                 <div class="mt-1 text-base text-gray-600" style="color:#24384E">1 - 4 years old</div>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #E8E3C9"href="#">
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg h-48 w-48" style="background-color: #E8E3C9" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
                             <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #A49E83">
@@ -75,13 +75,13 @@
                         <div class="ml-2 w-full flex-1">
                             <div>
                                 <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.SchoolAgedCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">School-aged</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#24384E">School-aged</div>
                                 <div class="mt-1 text-base text-gray-600" style="color:#24384E">5 - 9 years old</div>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #D0ECB6" href="#">
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg h-48 w-48" style="background-color: #D0ECB6" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
                             <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #829D69">
@@ -91,13 +91,13 @@
                         <div class="ml-2 w-full flex-1">
                             <div>
                                 <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.AdolescentsCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Adolescents</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#24384E">Adolescents</div>
                                 <div class="mt-1 text-base text-gray-600" style="color:#24384E">10 - 19 years old</div>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #BEE39B" href="#">
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg h-48 w-48" style="background-color: #BEE39B" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
                             <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #829D69">
@@ -107,13 +107,13 @@
                         <div class="ml-2 w-full flex-1">
                             <div>
                                 <div class="mt-3 text-4xl font-semibold leading-8" style="color:#24384E">@Model.AdultCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#24384E">Adult</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#24384E">Adult</div>
                                 <div class="mt-1 text-base text-gray-600" style="color:#24384E">25 - 59 years old</div>
                             </div>
                         </div>
                     </div>
                 </a>
-                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg" style="background-color: #ACCB8F" href="#">
+                <a class="transform hover:scale-105 transition duration-300 shadow-xl rounded-lg h-48 w-48" style="background-color: #ACCB8F" href="#">
                     <div class="p-5">
                         <div class="flex justify-between">
                             <div class="rounded-full h-6 px-2 flex justify-items-center text-white font-semibold text-lg" style="background-color: #829D69">
@@ -123,7 +123,7 @@
                         <div class="ml-2 w-full flex-1">
                             <div>
                                 <div class="mt-3 text-4xl font-semibold leading-8" style="color:#F7F6F6">@Model.SeniorCount</div>
-                                <div class="mt-1 text-2xl text-gray-600" style="color:#F7F6F6">Senior C.</div>
+                                <div class="mt-1 text-xl text-gray-600" style="color:#F7F6F6">Senior C.</div>
                                 <div class="mt-1 text-base text-gray-600" style="color:#F7F6F6">60 yrs. old & above</div>
                             </div>
                         </div>
@@ -306,8 +306,6 @@
 
     var chart = new ApexCharts(chart, options);
     chart.render();
-
-
 </script>
 
 
