Edit error page design

--- a/AUF.EMR.MVC/Views/Error/PageNotFound.cshtml
+++ b/AUF.EMR.MVC/Views/Error/PageNotFound.cshtml
@@ -1,28 +1,15 @@
-﻿@*
-   
-*@
-@{
+﻿@{
     Layout = "Layouts/_HouseholdLayout";
 }
 
-
-
-<main class="min-h-screen flex justify-center items-center bg-white px-6 py-24 sm:py-32 lg:px-8">
-    <div class="text-center">
-        <div class="relative w-6/12 lg:w-3/12 my-auto mx-auto">
-            <img class="w-full max-w-lg my-auto mx-auto" src="https://merakiui.com/images/components/illustration.svg" alt="">
-        </div>
-        <h1 class="mt-6 text-3xl font-bold tracking-tight text-red-500 sm:text-5xl">Page not found</h1>
-        <p class="mt-6 text-base leading-7 text-gray-600">Sorry, we couldn’t find the page you’re looking for.</p>
-        <div class="mt-10 flex items-center justify-center gap-x-6">
-            <a href="#" class="rounded-md bg-cyan-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-cyan-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600">Go back home</a>
-            <a href="#" class="text-sm font-semibold text-gray-900">Contact support</a>
+<section>
+    <div class="flex h-screen justify-center items-center py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6 flex">
+        <div class="mx-auto max-w-screen-sm text-center">
+            <img class="w-80 mx-auto lg:mx-auto" src="https://merakiui.com/images/components/illustration.svg" alt="">
+            <p class="mt-4 mb-4 text-3xl tracking-tight font-bold md:text-4xl dark:text-white" style="color: #800000">Page Not Found</p>
+            <p class="mb-4 text-lg font-light text-gray-500 dark:text-gray-400">Sorry, the page you're looking for doesn't exist.</p>
+            <a href="#" class="inline-flex font-medium rounded-lg text-sm px-5 py-2.5 text-center my-4" style="background-color: #ACCB8F; color: white;">Back to Homepage</a>
+             
         </div>
     </div>
-</main>
-
-
-
-
-
-
+</section>
