Add admin change password and fix navbar on admin

--- a/AUF.EMR.MVC/Views/User/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/User/Edit.cshtml
@@ -71,3 +71,9 @@
         
     </div>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
