--- a/AUF.EMR.MVC/Views/Shared/Navigations/_HouseholdNav.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Navigations/_HouseholdNav.cshtml
@@ -4,15 +4,18 @@
 @inject UserManager<ApplicationUser> UserManager
 @inject IBarangayService brgyService
 @{
-    var brgyName = (await @brgyService.GetBarangay()).BarangayName;
+    var brgy = (await @brgyService.GetBarangay());
     var user = (await UserManager.GetUserAsync(User));
 }
 
 <nav class="fixed top-0 w-full z-50 bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
-            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">@brgyName</span>
+        <a asp-action="Index" asp-controller="Household" class="flex items-center space-x-3 rtl:space-x-reverse">
+            @if (!string.IsNullOrEmpty(brgy.LogoBase64String))
+            {
+                <img class="w-8 h-8 rounded-full" src="data:image/png;base64,@brgy.LogoBase64String" alt="user photo">
+            }
+            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">@brgy.BarangayName</span>
         </a>
         <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
             <button type="button" class="flex text-sm bg-gray-800 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
