--- a/AUF.EMR.MVC/Views/User/Profile.cshtml
+++ b/AUF.EMR.MVC/Views/User/Profile.cshtml
@@ -5,8 +5,6 @@
     Layout = "Layouts/_BarangaySideLayout";
 }
 
-
-
     <div class="container mx-auto px-4 py-8">
 
         <div class="bg-white shadow-md rounded-lg p-8 mb-8">
@@ -15,55 +13,55 @@
 
             <dl class="grid grid-cols-1 md:grid-cols-2 gap-y-4 gap-x-8">
                 <div class="flex items-center">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-24">First Name</dt>
+                <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-36">First Name</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.User.FirstName)</dd>
                 </div>
                 <div class="flex items-center">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-24">Address</dt>
+                <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-36">Address</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.User.Address)</dd>
                 </div>
                 <div class="flex items-center">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-24">Middle Name</dt>
+                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-36">Middle Name</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.User.MiddleName)</dd>
                 </div>
                 <div class="flex items-center">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-24">Position</dt>
+                <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-36">Position</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.User.Position)</dd>
                 </div>
                 <div class="flex items-center">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-24">Last Name</dt>
+                <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-36">Last Name</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.User.LastName)</dd>
                 </div>
                 <div class="flex items-center">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-24">Username</dt>
+                <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-36">Username</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.User.UserName)</dd>
                 </div>
                 <div class="flex items-center">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-24">Profile Picture</dt>
+                <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-36">Profile Picture</dt>
                     <dd class="text-gray-900">
-                        @if (Model.User.Picture != null && Model.User.Picture.Length > 0)
-                        {
-                            <img src="data:image/png;base64,@Model.User.Picture" alt="Logo" width="100" height="100" class="rounded-lg">
-                        }
+                    @if (!string.IsNullOrEmpty(Model.User.LogoBase64String))
+                    {
+                        <img src="data:image/png;base64,@Model.User.LogoBase64String" alt="Logo" width="100" height="100" class="rounded-lg">
+                    }
                     </dd>
                 </div>
                 <div class="flex items-center">
                 </div>
                 <div class="flex items-center">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-24">Date of Birth</dt>
+                <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-36">Date of Birth</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.User.Birthday)</dd>
                 </div>
                 <div class="flex items-center">
                 </div>
                 <div class="flex items-center">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-24">Contact No.</dt>
+                <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-36">Contact No.</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.User.ContactNo)</dd>
                 </div>
             </dl>
 
             <div class="flex justify-end mt-8">
                 <a asp-action="Index" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back</a>
-                <a asp-action="Edit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 w-20 flex items-center justify-center">Edit</a>
+            <a asp-action="Edit" asp-route-id="@Model.User.Id" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 w-20 flex items-center justify-center">Edit</a>
             </div>
         </div>
     </div>
