--- a/AUF.EMR.MVC/Views/User/ResetPassword.cshtml
+++ b/AUF.EMR.MVC/Views/User/ResetPassword.cshtml
@@ -37,5 +37,8 @@
     </div>
 </div>
 
-
-
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
