--- a/AUF.EMR.MVC/Views/User/AdminChangePassword.cshtml
+++ b/AUF.EMR.MVC/Views/User/AdminChangePassword.cshtml
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="flex justify-end">
-                <a asp-action="Back" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back</a>
+                <a asp-action="Index" asp-controller="User" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back</a>
                 <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Update password</button>
             </div>
         </form>
